--- a/app/Resources/views/plastique.html.twig
+++ b/app/Resources/views/plastique.html.twig
@@ -32,15 +32,49 @@
         }
     </style>
 </head>
-<body id="main_container">
+<body *id="main_container">
+    <div id="main_container">
 
-    {% block body %}{% endblock %}
+        {% block body %}{% endblock %}
+    </div>
+
+{% verbatim %}
+    <script type="text/html" id="template-notification">
+        <div class="notification animated fadeInLeftMiddle fast<%=item.itemClass %>">
+            <div class="left">
+                <div style="background-image: url(<%=item.imagePath %>)" class="<%=item.imageClass %>"></div>
+            </div>
+            <div class="right">
+                <div class="inner"><%=item.text %><div>
+                <div class="time"><%=item.time %></div>
+            </div>
+
+            <i class="icon-remove-sign hide"></i>
+        </div>
+    </script>
+    <script type="text/html" id="template-notifications">
+        <div class="container">
+            <div class="row" id="notifications-wrapper">
+                <div id="notifications" class="<%=bootstrapPositionClass %> notifications animated">
+                    <div id="dismiss-all" class="dismiss-all button blue">Dismiss all</div>
+                    <div id="content">
+                        <div id="notes"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </script>
+
+{% endverbatim %}
 
     {% javascripts '@bootstrap_js' %}
     <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
 
     {% block javascripts_footer %}{% endblock %}
+    <script src="/frontend/plastique/javascripts/notification.js" type="text/javascript"></script>
+    <script src="/frontend/plastique/javascripts/notifications.js" type="text/javascript"></script>
+
     <script src="/frontend/plastique/javascripts/prettify.js" type="text/javascript"></script>
     <link href="/frontend/plastique/stylesheets/prettify.css" media="screen" rel="stylesheet" type="text/css"/>
     <script type="text/javascript">
