--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "::plastique.html.twig" %}
 
+{% block title %}CodeMonkeys Budget{% endblock %}
+
 {% block javascripts_header %}
     <script type="text/javascript">
         var require = {
