--- a/web/frontend/application/layouts/main.tpl.html
+++ b/web/frontend/application/layouts/main.tpl.html
@@ -34,4 +34,31 @@
     </div>
     <div class="a-modal-window-container"></div>
 </section>
+
+
+<script type="text/html" id="template-notification">
+    <div class="notification animated fadeInLeftMiddle fast<<%="%"%>=item.itemClass <%="%"%>>">
+        <div class="left">
+            <div style="background-image: url(<<%="%"%>=item.imagePath<%="%"%>>)" class="<<%="%"%>=item.imageClass<%="%"%>>"></div>
+        </div>
+        <div class="right">
+            <div class="inner"><<%="%"%>=item.text <%="%"%>></div>
+            <div class="time"><<%="%"%>=item.time <%="%"%>></div>
+        </div>
+
+        <i class="icon-remove-sign hide"></i>
+    </div>
+</script>
+<script type="text/html" id="template-notifications">
+    <div class="container">
+        <div class="row" id="notifications-wrapper">
+            <div id="notifications" class="<<%="%"%>=bootstrapPositionClass<%="%"%>> notifications animated">
+                <div id="dismiss-all" class="dismiss-all button blue">Dismiss all</div>
+                <div id="content">
+                    <div id="notes"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
   
