--- a/web/frontend/modules/involvement/views/byProject.tpl.html
+++ b/web/frontend/modules/involvement/views/byProject.tpl.html
@@ -8,112 +8,120 @@ var occupations = app.collection('occupations');
 
     <div class="tab-header">Занятость персонала по проектам</div>
 
-    <div class="b-projects b-projects_viewtype_list b-projects_theme_tech-color pull-left" style="background-color:#fff">
+    <div class="row-fluid">
+            <div class="span9">
 
-        <div class="b-project j-toggle-project-details" style="margin-bottom: 25px; padding-bottom: 25px; border-bottom: 1px solid #ccc">
-            <div class="b-project__title">
-                <div class="b-project__title-text">Свободные сотрудники</div>
-            </div>
-            <div class="b-project__details">
-                <ul class="b-roles b-list b-list_content_roles">
-                    <%occupations.each(function(occupation){%>
-                        <%
-                        var freeEmployeesWithOccupation = employees.filter(function(employee){
-                            return ( employee.occupations().indexOf(occupation) != -1 ) && (employee.freetime() != false);
-                        });
-                        if( freeEmployeesWithOccupation.length == 0 ) return;
-                        %>
 
-                        <li class="b-list__item">
-                            <%_(freeEmployeesWithOccupation).each(function(employee){%>
-                            <div class="b-role">
-                                <div class="b-role__icon b-role__icon_content_<%=occupation.abbr()%> b-role__icon_progress_<%=employee.freetime()%>"><%=occupation.shortTitle()%></div>
-                                <div class="b-role__details">
-                                    <a class="b-role__name b-link b-link_viewtype_default j-nav" href="<%=employee.linkTo("show")%>" title=""><span class="b-link__text"><%=employee%></span></a>
-                                    <div class="b-role__meta">
-                                        <div class="b-role__other-projects">
-                                            <%employee.involvements().each(function(involvement){%>
-                                            <%=involvement%>% &mdash;
+                <div class="b-projects b-projects_viewtype_list b-projects_theme_tech-color pull-left" style="background-color:#fff">
 
-                                            <span class="b-link b-link_type_pseudo b-link_viewtype_context"><%=involvement.project()%></span>
-                                            <br class="b-line-break" />
-                                            <%});%>
+                    <div class="b-project j-toggle-project-details" style="margin-bottom: 25px; padding-bottom: 25px; border-bottom: 1px solid #ccc">
+                        <div class="b-project__title">
+                            <div class="b-project__title-text">Свободные сотрудники</div>
+                        </div>
+                        <div class="b-project__details">
+                            <ul class="b-roles b-list b-list_content_roles">
+                                <%occupations.each(function(occupation){%>
+                                <%
+                                var freeEmployeesWithOccupation = employees.filter(function(employee){
+                                return ( employee.occupations().indexOf(occupation) != -1 ) && (employee.freetime() != false);
+                                });
+                                if( freeEmployeesWithOccupation.length == 0 ) return;
+                                %>
+
+                                <li class="b-list__item">
+                                    <%_(freeEmployeesWithOccupation).each(function(employee){%>
+                                    <div class="b-role">
+                                        <div data-employee-id="<%=employee.id%>" class="j-edit-project-involvement b-role__icon b-role__icon_content_<%=occupation.abbr()%> b-role__icon_progress_<%=employee.freetime()%>"><%=occupation.shortTitle()%></div>
+                                        <div class="b-role__details">
+                                            <a class="b-role__name b-link b-link_viewtype_default j-nav" href="<%=employee.linkTo("show")%>" title=""><span class="b-link__text"><%=employee%></span></a>
+                                            <div class="b-role__meta">
+                                                <div class="b-role__other-projects">
+                                                    <%employee.involvements().each(function(involvement){%>
+                                                    <%=involvement%>% &mdash;
+
+                                                    <span class="b-link b-link_type_pseudo b-link_viewtype_context"><%=involvement.project()%></span>
+                                                    <br class="b-line-break" />
+                                                    <%});%>
+                                                </div>
+
+                                            </div>
                                         </div>
-
                                     </div>
-                                </div>
-                            </div>
-                            <%});%>
-                        </li>
+                                    <%});%>
+                                </li>
+                                <%});%>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <%projects.each(function(project){%>
+                    <div class="b-project j-toggle-project-details" data-title="<%=project%>">
+                        <div class="b-project__title">
+                            <div class="b-project__title-text"><a class="j-nav" href="<%=project.linkTo("show")%>"><%=project%></a></div>
+                        </div>
+                        <div class="b-project__details">
+                            <ul class="b-roles b-list b-list_content_roles">
+
+                                <%
+                                var _projectEmployees = _(project.employees());
+                                %>
+                                <%occupations.each(function(occupation){%>
+                                <%
+                                var employeesWithOccupation = _projectEmployees.filter(function(employee){
+                                return employee.occupations().indexOf(occupation) != -1;
+                                });
+                                if( employeesWithOccupation.length == 0 ) return;
+                                %>
+
+                                <li class="b-list__item">
+                                    <%_(employeesWithOccupation).each(function(employee){%>
+                                    <div class="b-role <%if(employee.freetime()){%>b-role_state_free<%};%>">
+                                        <div data-project-involvement-id="<%=employee.involvementByProject(project).id%>" data-employee-id="<%=employee.id%>" class="j-edit-project-involvement b-role__icon b-role__icon_content_<%=occupation.abbr()%> b-role__icon_progress_<%=employee.involvement(project)%>">
+                                            <%=occupation.shortTitle()%>
+                                            <%if(employee.freetime()){%>
+                                            <div class="b-role__free"><%=employee.freetime()%>%</div>
+                                            <%};%>
+                                        </div>
+                                        <div class="b-role__details">
+                                            <a class="b-role__name b-link b-link_viewtype_default j-nav" href="<%=employee.linkTo("show")%>" title=""><span class="b-link__text"><%=employee%></span></a>
+                                            <div class="b-role__meta">
+                                                <div class="b-role__other-projects">
+                                                    <%employee.involvements().each(function(involvement){%>
+                                                    <%if(involvement.project() == project){%>
+                                                    <b style="color:black">
+                                                        <%};%>
+                                                        <%=involvement%>% &mdash;
+
+                                                        <span class="b-link b-link_type_pseudo b-link_viewtype_context"><%=involvement.project()%></span>
+
+                                                        <%if(involvement.project() == project){%>
+                                                    </b>
+                                                    <%};%>
+
+                                                    <br class="b-line-break" />
+                                                    <%});%>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <%});%>
+                                </li>
+                                <%});%>
+
+                            </ul>
+                        </div>
+                    </div>
                     <%});%>
-                </ul>
+                </div>
+
+
+            </div>
+            <div class="span3">
+                <div class="prepend-transparent" style="margin-top:4px;">
+                    <span class="add-on button"><i class="icon-search"></i></span><input class="span11 input-transparent j-filter-projects"  id="prependedInput" size="16" type="text" placeholder="Поиск проекта">
+                </div>
             </div>
         </div>
-
-        <%projects.each(function(project){%>
-        <div class="b-project j-toggle-project-details" data-title="<%=project%>">
-            <div class="b-project__title">
-                <div class="b-project__title-text"><a class="j-nav" href="<%=project.linkTo("show")%>"><%=project%></a></div>
-            </div>
-            <div class="b-project__details">
-                <ul class="b-roles b-list b-list_content_roles">
-
-                    <%
-                    var _projectEmployees = _(project.employees());
-                    %>
-                    <%occupations.each(function(occupation){%>
-                        <%
-                        var employeesWithOccupation = _projectEmployees.filter(function(employee){
-                        return employee.occupations().indexOf(occupation) != -1;
-                        });
-                        if( employeesWithOccupation.length == 0 ) return;
-                        %>
-
-                        <li class="b-list__item">
-                            <%_(employeesWithOccupation).each(function(employee){%>
-                            <div class="b-role <%if(employee.freetime()){%>b-role_state_free<%};%>">
-                                <div data-project-involvement-id="<%=employee.involvementByProject(project).id%>" data-employee-id="<%=employee.id%>" class="j-edit-project-involvement b-role__icon b-role__icon_content_<%=occupation.abbr()%> b-role__icon_progress_<%=employee.involvement(project)%>">
-                                    <%=occupation.shortTitle()%>
-                                    <%if(employee.freetime()){%>
-                                    <div class="b-role__free"><%=employee.freetime()%>%</div>
-                                    <%};%>
-                                </div>
-                                <div class="b-role__details">
-                                    <a class="b-role__name b-link b-link_viewtype_default j-nav" href="<%=employee.linkTo("show")%>" title=""><span class="b-link__text"><%=employee%></span></a>
-                                    <div class="b-role__meta">
-                                        <div class="b-role__other-projects">
-                                        <%employee.involvements().each(function(involvement){%>
-                                            <%if(involvement.project() == project){%>
-                                                <b style="color:black">
-                                            <%};%>
-                                            <%=involvement%>% &mdash;
-
-                                            <span class="b-link b-link_type_pseudo b-link_viewtype_context"><%=involvement.project()%></span>
-
-                                            <%if(involvement.project() == project){%>
-                                                </b>
-                                            <%};%>
-
-                                            <br class="b-line-break" />
-                                        <%});%>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <%});%>
-                        </li>
-                    <%});%>
-
-                </ul>
-            </div>
-        </div>
-        <%});%>
-    </div>
-
-    <div class="pull-right">
-        Filter: <input class="j-filter-projects" type="text" />
-    </div>
-
-    <br class="clear" style="clear:both;"/>
 </div>
+
