--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -31,7 +31,9 @@
     <link rel="stylesheet" href="frontend/bower_components/select2/select2.css"/>
 
     <style type="text/css">
-
+        #notifications {
+            z-index:10000;
+        }
     </style>
 
 {% endblock %}
