--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -37,7 +37,7 @@
             <div class="black-box">
                 <div class="tab-header">Превышения</div>
                 <div class="padded">
-                    Тут можно отображать проекты которые скоро закончатся, либо проекты идущее с превышением бюджета
+                    Тут можно отображать проекты которые скоро закончатся, либо проекты идущие с превышением бюджета
                 </div>
             </div>
         </div>
