--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -20,6 +20,9 @@
                 },
                 "modules/employee/collection": {
                     url: "{{ path("api_v1_get_employees") }}"
+                },
+                "modules/reports/projects-collection": {
+                    url: "{{ path("api_v1_reports_projects", {"year": ":year"}) }}"
                 }
             }
         };
