--- a/app/Resources/views/plastique.html.twig
+++ b/app/Resources/views/plastique.html.twig
@@ -74,6 +74,7 @@
     {% block javascripts_footer %}{% endblock %}
     <script src="/frontend/plastique/javascripts/notification.js" type="text/javascript"></script>
     <script src="/frontend/plastique/javascripts/notifications.js" type="text/javascript"></script>
+    <script src="/frontend/plastique/javascripts/jqueryFlot/jquery.flot.min.js" type="text/javascript"></script>
 
     <script src="/frontend/plastique/javascripts/prettify.js" type="text/javascript"></script>
     <link href="/frontend/plastique/stylesheets/prettify.css" media="screen" rel="stylesheet" type="text/css"/>
