--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -23,6 +23,9 @@
                 },
                 "modules/reports/projects-collection": {
                     url: "{{ path("api_v1_reports_projects", {"year": ":year"}) }}"
+                },
+                "modules/reports/project-summary-collection": {
+                    url: "{{ path("api_v1_reports_project", {"projectId": ":id", "year": ":year"}) }}"
                 }
             }
         };
