--- a/web/frontend/modules/reports/views/list.tpl.html
+++ b/web/frontend/modules/reports/views/list.tpl.html
@@ -4,6 +4,6 @@
     </div>
 
     <div>
-        <div class="padded"> your awesome content here</div>
+        <div class="padded">Понятия не имею что тут будет</div>
     </div>
 </div>
