--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row-fluid">
         <div class="span6">
-            <div class="black-box">
+            <div class="box">
                 <div class="tab-header">Алярм! Простой ресурсов!</div>
                 <div>
                     <table class="table">
@@ -38,6 +38,19 @@
                 <div class="tab-header">Превышения</div>
                 <div class="padded">
                     Тут можно отображать проекты которые скоро закончатся, либо проекты идущие с превышением бюджета
+                </div>
+            </div>
+            <div class="black-box">
+                <div class="tab-header">TODO</div>
+                <div class="padded">
+                    <ol style="list-style-type: octal; margin-left: 15px;">
+                        <li>Разделение на регионы</li>
+                        <li>Заполнение доп. расходов (командировки, офисные расходы) (с разделением по ролям? Чтобы офисные расходы могли заполнять офис менеджеры? Low priority)</li>
+                        <li>Лимиты по проектам (общий бюджет/месячный бюджет)</li>
+                        <li>Анализ расходов/потерь по простоям сотрудников</li>
+                        <li>Тегирование проектов технологиями и ведение портфеля технологий компании и навыков сотрудников</li>
+                        <li>Карточка сотрудника (навыки/премии/повышения ЗП)</li>
+                    </ol>
                 </div>
             </div>
         </div>
