--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -50,6 +50,8 @@
                         <li>Анализ расходов/потерь по простоям сотрудников</li>
                         <li>Тегирование проектов технологиями и ведение портфеля технологий компании и навыков сотрудников</li>
                         <li>Карточка сотрудника (навыки/премии/повышения ЗП)</li>
+                        <li>Раздел ФОТ</li>
+                        <li>Раздел Офисные расходы?</li>
                     </ol>
                 </div>
             </div>
