--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -37,7 +37,7 @@
             <div class="black-box">
                 <div class="tab-header">Превышения</div>
                 <div class="padded">
-                    Тут можно отображать проекты которые скоро закончатся, либо проекты идущие с превышением бюджета
+                    Тут можно отображать проекты которые скоро закончатся, либо проекты, идущие с превышением бюджета
                 </div>
             </div>
             <div class="black-box">
@@ -52,6 +52,7 @@
                         <li>Карточка сотрудника (навыки/премии/повышения ЗП)</li>
                         <li>Раздел ФОТ</li>
                         <li>Раздел Офисные расходы?</li>
+                        <li>Планирование: Необходимость ресурса!11</li>
                     </ol>
                 </div>
             </div>
