--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -12,6 +12,9 @@
                 "modules/occupation/collection": {
                     url: "{{ path("api_v1_get_occupations") }}"
                 },
+                "modules/spendings-type/collection": {
+                    url: "{{ path("api_v1_get_spendingstypes") }}"
+                },
                 "modules/project/collection": {
                     url: "{{ path("api_v1_get_projects") }}"
                 },
