--- a/web/frontend/modules/reports/views/project-details.tpl.html
+++ b/web/frontend/modules/reports/views/project-details.tpl.html
@@ -1,10 +1,10 @@
 <div class="box">
     <div class="tab-header">
-        <%=view.options.project%> [<%=view.options.month%>/<%=view.options.year%>]
+        Детализация: <%=view.options.project%> [<%=view.options.month%>/<%=view.options.year%>]
     </div>
 
-    <div>
-        Тут будет инфа по проекту
+    <div class="padded">
+        <div class="j-report">Загрузка...</div>
     </div>
 
 </div>
