--- a/web/frontend/modules/reports/views/projects-month-report.tpl.html
+++ b/web/frontend/modules/reports/views/projects-month-report.tpl.html
@@ -16,9 +16,9 @@ var types = _(view.getSpendingTypes());
     <tr>
         <th><a href="<%=view.options.project.linkTo('finance_report_by_year_month', view.options.year, i)%>" class="j-nav"><%=month%></a></th>
         <%types.each(function(type){%>
-        <td><%=view.report.getTotalByTypeAndMonth(type, i+1)%></td>
+        <td><%=_.currencyFormat(view.report.getTotalByTypeAndMonth(type, i+1))%></td>
         <%});%>
-        <td><%=view.report.getTotalByMonth(i+1)%></td>
+        <td><%=_.currencyFormat(view.report.getTotalByMonth(i+1))%></td>
     </tr>
     <%});%>
     </tbody>
