--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -49,7 +49,7 @@
                         <li>Лимиты по проектам (общий бюджет/месячный бюджет)</li>
                         <li>Анализ расходов/потерь по простоям сотрудников</li>
                         <li>Тегирование проектов технологиями и ведение портфеля технологий компании и навыков сотрудников</li>
-                        <li>Карточка сотрудника (навыки/премии/повышения ЗП)</li>
+                        <li>Карточка сотрудника (портфолио/навыки/премии/повышения ЗП)</li>
                         <li>Раздел ФОТ</li>
                         <li>Раздел Офисные расходы?</li>
                         <li>Планирование: Необходимость ресурса!11</li>
