--- a/web/frontend/modules/reports/views/year.tpl.html
+++ b/web/frontend/modules/reports/views/year.tpl.html
@@ -3,36 +3,7 @@
         Сводный годовой отчет
     </div>
 
-    <div>
-
-        <table class="table">
-            <thead>
-                <tr>
-                    <th rowspan="2" style="vertical-align: middle">Проект</th>
-                    <th colspan="12" style="text-align: center">Месяцы</th>
-                    <th rowspan="2" style="vertical-align: middle">Итого</th>
-                </tr>
-                <tr>
-                    <th>Январь</th>
-                    <th>Февраль</th>
-                    <th>Март</th>
-                    <th>Апрель</th>
-                    <th>Май</th>
-                    <th>Июнь</th>
-                    <th>Июль</th>
-                    <th>Август</th>
-                    <th>Сентябрь</th>
-                    <th>Октябрь</th>
-                    <th>Ноябрь</th>
-                    <th>Декабрь</th>
-                </tr>
-            </thead>
-            <tbody class="j-report-container">
-                <tr>
-                    <th colspan="14" style="text-align: center">Идет загрузка...</th>
-                </tr>
-            </tbody>
-        </table>
-
+    <div class="j-report-container">
+        <div class="padded">Загрузка...</div>
     </div>
 </div>
