--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -50,6 +50,7 @@
                         <li>Анализ расходов/потерь по простоям сотрудников</li>
                         <li>Тегирование проектов технологиями и ведение портфеля технологий компании и навыков сотрудников</li>
                         <li>Карточка сотрудника (портфолио/навыки/премии/повышения ЗП)</li>
+                        <li>Карточка сотрудника (заметки с типами (обещано повышение/косяки/инициативы))</li>
                         <li>Раздел ФОТ</li>
                         <li>Раздел Офисные расходы?</li>
                         <li>Планирование: Необходимость ресурса!11</li>
