--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -54,5 +54,5 @@
 {% endblock %}
 
 {% block body %}
-    Loading...
+    <div style="text-align: center; margin-top: 200px;">Loading...</div>
 {% endblock %}
