--- a/web/frontend/helpers/views/model.edit/edit.tpl.html
+++ b/web/frontend/helpers/views/model.edit/edit.tpl.html
@@ -58,6 +58,9 @@ fields.push(key);
                             var collection = app.collection(view.options.fields[key].entityType);
                             %>
                             <select style="width:100%" name="<%=key%>" data-data-attr="<%=key%>" class="j-data">
+                                <%if(view.options.fields[key].nullable){%>
+                                <option value="">---</option>
+                                <%};%>
                                 <%collection.each(function(entity){%>
                                 <option value="<%=entity.id%>" <%if( attr == entity ){%>selected="selected"<%};%>><%=entity%></option>
                                 <%});%>
@@ -80,7 +83,7 @@ fields.push(key);
     <%if(!view.options.drawAsWindow){%>
         <tfoot>
         <tr>
-            <td colspan="2">
+            <td colspan="2" class="j-buttons">
                 <a class="button j-cancel j-nav" href="<%=model.linkTo('show')%>"><i class="icon-remove"></i> Отменить</a>
                 <button class="button j-save green"><i class="icon-ok"></i> Сохранить</button>
             </td>
@@ -91,7 +94,7 @@ fields.push(key);
 <%if(view.options.drawAsWindow){%>
     </div>
     <div class="modal-footer">
-        <div class="inner-well">
+        <div class="inner-well j-buttons">
             <a class="button mini rounded light-gray" data-dismiss="modal">Отменить</a>
             <button class="button j-save mini rounded blue"><i class="icon-ok"></i> Сохранить</button>
         </div>
