Bunch of small fixes

--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -15,6 +15,9 @@
                 "modules/region/collection": {
                     url: "{{ path("api_v1_get_regions") }}"
                 },
+                "modules/spending/collection": {
+                    url: "{{ path("api_v1_get_spendings") }}"
+                },
                 "modules/spendings-type/collection": {
                     url: "{{ path("api_v1_get_spendingstypes") }}"
                 },
