--- a/web/frontend/modules/reports/views/project-details.tpl.html
+++ b/web/frontend/modules/reports/views/project-details.tpl.html
@@ -4,6 +4,10 @@
     </div>
 
     <div class="padded">
+        <div class="well">
+            <button class="btn mini green">Добавить расходы</button>
+            <button class="btn mini red pull-right">Зафиксировать офисные расходы</button>
+        </div>
         <div class="j-report">Загрузка...</div>
     </div>
 
