--- a/web/frontend/modules/reports/views/projects.tpl.html
+++ b/web/frontend/modules/reports/views/projects.tpl.html
@@ -10,14 +10,26 @@
                 <div class="padded">
                     <div id="graph_placeholder" style="width:100%; height: 400px;"></div>
                 </div>
+                <p>Добавить еще информацию по разработчикам на каждый месяц (надо ли?)</p>
                 <div class="padded j-report-by-type">
 
                 </div>
             </div>
             <div class="span3">
                 <div class="padded">
+                    <h5>Общие региональные расходы</h5>
                     <ul>
-                        <%app.collection('projects').each(function(project){%>
+                        <%app.collection('projects').chain().filter(function(project){ return project.region(); }).each(function(project){%>
+                        <li>
+                            <%if(project.id == view.options.projectId){%><b><%}%>
+                            <a class="j-nav" href="<%=project.linkTo("finance_report_by_year", view.options.year)%>"><%=project%></a>
+                            <%if(project.id == view.options.projectId){%></b><%}%>
+                        </li>
+                        <%});%>
+                    </ul>
+                    <h5>Проектные расходы</h5>
+                    <ul>
+                        <%app.collection('projects').chain().filter(function(project){ return !project.region(); }).each(function(project){%>
                         <li>
                             <%if(project.id == view.options.projectId){%><b><%}%>
                             <a class="j-nav" href="<%=project.linkTo("finance_report_by_year", view.options.year)%>"><%=project%></a>
@@ -31,9 +43,15 @@
     </div>
     <%}else{%>
     <div class="padded">
-        <h4>Выберите проект</h4>
+        <h5>Общие региональные расходы</h5>
         <ul>
-            <%app.collection('projects').each(function(project){%>
+            <%app.collection('projects').chain().filter(function(project){ return project.region(); }).each(function(project){%>
+            <li><a class="j-nav" href="<%=project.linkTo("finance_report_by_year", (new Date()).getFullYear())%>"><%=project%></a></li>
+            <%});%>
+        </ul>
+        <h5>Проектные расходы</h5>
+        <ul>
+            <%app.collection('projects').chain().filter(function(project){ return !project.region(); }).each(function(project){%>
             <li><a class="j-nav" href="<%=project.linkTo("finance_report_by_year", (new Date()).getFullYear())%>"><%=project%></a></li>
             <%});%>
         </ul>
