--- a/web/frontend/modules/reports/views/project-details.tpl.html
+++ b/web/frontend/modules/reports/views/project-details.tpl.html
@@ -1,13 +1,15 @@
+<div>
+    <button class="btn mini green j-add-spendings pull-right"><i class="icon-plus"></i> Добавить расходы</button>
+</div>
+<div class="j-spendings-add-container" style="margin-top: 10px; clear:both;">&nbsp;</div>
+
 <div class="box">
     <div class="tab-header">
         Детализация: <%=view.options.project%> [<%=view.options.month%>/<%=view.options.year%>]
     </div>
 
     <div class="padded">
-        <div class="well">
-            <button class="btn mini green">Добавить расходы</button>
-            <button class="btn mini red pull-right">Зафиксировать офисные расходы</button>
-        </div>
+
         <div class="j-report">Загрузка...</div>
     </div>
 
