--- a/web/frontend/modules/reports/views/project-details-report.tpl.html
+++ b/web/frontend/modules/reports/views/project-details-report.tpl.html
@@ -1,25 +1,37 @@
+<style>
+    .j-report-description {
+        display: none;
+    }
+    .b-vasia-header {
+        padding-top:12px;
+        padding-bottom:0;
+        border-top:0 none;
+    }
+</style>
 <table class="table">
     <tbody>
     <%view.report.getTypes().each(function(type){%>
         <tr>
-            <th colspan="4"><%=type%></th>
-            <th><%=_.currencyFormat(view.report.getTotalByType(type))%></th>
+            <th colspan="5" class="b-vasia-header"><%=type%></th>
+            <th class="b-vasia-header"><%=_.currencyFormat(view.report.getTotalByType(type))%></th>
         </tr>
         <%view.report.getByType(type).each(function(employeeReport){%>
             <%if(employeeReport.employee()){%>
                 <tr>
-                    <td>&nbsp;</td>
-                    <td><%=employeeReport.employee()%></td>
+                    <!--<td>&nbsp;</td>-->
+                    <td colspan="2"><%=employeeReport.employee()%></td>
                     <td><%=employeeReport.employee().occupations()%></td>
                     <td><abbr title="Учтено дней"><%=employeeReport.get('rows')%></abbr></td>
                     <td><%=_.currencyFormat(employeeReport.get('total'))%></td>
+                    <td></td>
                 </tr>
             <%};%>
             <%if(employeeReport.description()){%>
-            <tr>
-                <td></td>
-                <td colspan="3" style="padding-left: 50px;"><i><%=employeeReport.description().join('<br />')%></i></td>
-                <td></td>
+            <tr class="j-report-description">
+                <td style="border: 0;"></td>
+                <td  colspan="3" style="border:0; padding-left: 50px;"><i><%=employeeReport.description().join('<br />')%></i></td>
+                <td style="border: 0;"></td>
+                <td style="border: 0;"></td>
             </tr>
             <%};%>
         <%});%>
@@ -27,7 +39,7 @@
     </tbody>
     <tfoot>
     <tr>
-        <th colspan="4">Итого:</th>
+        <th colspan="5">Итого:</th>
         <th><%=_.currencyFormat(view.report.getTotal())%></th>
     </tr>
     </tfoot>
