removal of spendings done

--- a/web/frontend/modules/reports/views/project-details.tpl.html
+++ b/web/frontend/modules/reports/views/project-details.tpl.html
@@ -1,5 +1,5 @@
-<div>
-    <button class="button green j-add-spendings pull-right"><i class="icon-plus"></i> Добавить расходы</button>
+<div style="margin-bottom: 10px;">
+    <button class="button j-add-spendings pull-right"><i class="icon-plus"></i> Добавить расходы</button>
 </div>
 <div class="j-spendings-add-container" style="margin-top: 10px; clear:both;">&nbsp;</div>
 
