--- a/web/frontend/application/views/dashboard.tpl.html
+++ b/web/frontend/application/views/dashboard.tpl.html
@@ -52,7 +52,7 @@
                         <li>Карточка сотрудника (портфолио/навыки/премии/повышения ЗП)</li>
                         <li>Карточка сотрудника (заметки с типами (обещано повышение/косяки/инициативы))</li>
                         <li>Раздел ФОТ</li>
-                        <li>Раздел Офисные расходы?</li>
+                        <li><strike style="text-decoration:line-through;">Раздел Офисные расходы?</strike></li>
                         <li>Планирование: Необходимость ресурса!11</li>
                     </ol>
                 </div>
