--- a/web/frontend/application/layouts/main.tpl.html
+++ b/web/frontend/application/layouts/main.tpl.html
@@ -11,20 +11,15 @@
 
         <div class="container-fluid">
             <div class="row-fluid search-button-bar-container">
-                <div class="span12">
+                <div class="span9">
                     <ul class="breadcrumb">
                     </ul>
-                    <a class="search-button-trigger" href="#"><i class="icon-search"></i></a>
+
                 </div>
+                <div class="span3 a-region-selector"></div>
             </div>
 
-            <div class="row-fluid search-bar-nav">
-                <div class="span12">
-                    <form>
-                        <input type="text" class="search" placeholder="Search...">
-                    </form>
-                </div>
-            </div>
+
         </div>
 
     </div>
