Стоимость часа работы

--- a/web/frontend/helpers/views/model.show/show.tpl.html
+++ b/web/frontend/helpers/views/model.show/show.tpl.html
@@ -34,6 +34,9 @@
                 </td>
             </tr>
         <%});%>
+        <%if(view.options.htmlInclude && view.options.htmlInclude.footer){%>
+            <%=view.options.htmlInclude.footer(model)%>
+        <%};%>
     </tbody>
     <tfoot>
     <tr>
